@@ -5,11 +5,10 @@ requires "File::HomeDir"                  => "1.00";
 requires "File::ReadBackwards"            => "1.05";
 requires "HTTP::AcceptLanguage"           => "0.02";
 requires "IRC::Utils"                     => "0.12";
-requires "JSON::Validator"                => "4.13";
-requires "LinkEmbedder"                   => "1.17";
+requires "LinkEmbedder"                   => "1.18";
 requires "Module::Install"                => "1.10"; # required by Text::MultiMarkdown
-requires "Mojolicious"                    => "9.00";
-requires "Mojolicious::Plugin::OpenAPI"   => "4.00";
+requires "Mojolicious"                    => "9.14";
+requires "Mojolicious::Plugin::OpenAPI"   => "4.02";
 requires "Mojolicious::Plugin::Webpack"   => "0.14";
 requires "Parse::IRC"                     => "1.22";
 requires "Text::Markdown"                 => "1.00";
