@@ -37,7 +37,7 @@ $t->websocket_ok('/events')
 
 $t->get_ok('/api/user')->status_is(200);
 $t->get_ok('/login')->status_is(200);
-$t->get_ok('/logout')->status_is(302)->header_is(Location => '/login');
+$t->get_ok('/logout.html')->status_is(302)->header_is(Location => '/login');
 $t->get_ok('/login')->status_is(200);
 $t->get_ok('/api/user')->status_is(401);
 
