@@ -1,6 +1,7 @@
 Revision history for perl distribution Convos
 
 6.07 Not Released
+ - Fix compatibility with Mojolicious 9.11
  - Fix typo in Fallback.svelte
 
 6.06 2021-03-05T08:30:00+0900
